Default Changelist Сашка поправил move()

--- a/5/index.html
+++ b/5/index.html
@@ -1,18 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>game</title>
-    <link rel="stylesheet" href="main.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-</head>
-<body>
-<div class="game-field">
-</div>
-<div class="start-block">
-    <button class="buttons" id="btnStart">Start one</button>
-</div>
+<html>
+	<head>
+		<title>Game</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+	</head>
 
-<script src="script.js"></script>
-</body>
+	<body>
+		<audio id="player" src="https://ringon.site/?do=get-file&id=6672"></audio>
+		<div class="game-field"> <!-- Игровое поле -->
+			
+
+			<div class="start-block">
+				<button id="btn-start">Start Game</button>
+			</div><!-- block for start and end game -->
+		</div>
+
+		<script src="script.js"></script>
+	</body>
 </html>
