--- a/17Home/index.html
+++ b/17Home/index.html
@@ -8,6 +8,8 @@
     <title>Sass</title>
 </head>
 <body>
-
+    <header>
+        <img src="./src/static/head.png" alt="logo">
+    </header>
 </body>
 </html>
