--- a/17Home/index.html
+++ b/17Home/index.html
@@ -5,11 +5,54 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./build/style/main.css">
     <title>Sass</title>
 </head>
 <body>
-    <header>
-        <img src="./src/static/head.png" alt="logo">
-    </header>
+<header>
+    <img src="./src/static/typelogo-15.png" alt="logo">
+</header>
+<section class="menu">
+    <ul>
+        <li class="menu-item">HOME</li>
+        <li class="menu-item">HEALTH</li>
+        <li class="menu-item">FOOD</li>
+        <li class="menu-item">DESIGN</li>
+        <li class="menu-item">TRAVEL</li>
+        <li class="menu-item">SIMPLE PAGE</li>
+    </ul>
+</section>
+<section class="thumbnails">
+    <div class="general-thumbnails">
+        <div class="thumbnails-item">
+            <h1>Home decor ideas</h1>
+        </div>
+    </div>
+    <div class="sider-thumbnails">
+        <div class="thumbnails-item">
+            <h1>Home decor ideas</h1>
+        </div>
+        <div class="thumbnails-item">
+            <h1>Home decor ideas</h1>
+        </div>
+    </div>
+</section>
+<section class="mythumb">
+    <div class="news">
+        <div class="imageNews">imageNews</div>
+        <div class="textNews">textNews</div>
+    </div>
+    <div class="categories">
+        <b>Categories</b>
+        <ul>
+            <li>Ddsign (6)</li>
+            <li>Food (5)</li>
+            <li>Health (6)</li>
+            <li>Lifestyle (8)</li>
+            <li>Travel (6)</li>
+        </ul>
+    </div>
+</section>
+<script src="./build/js/main.js"></script>
 </body>
 </html>
