--- a/17Home/index.html
+++ b/17Home/index.html
@@ -36,14 +36,33 @@
             <h1>Home decor ideas</h1>
         </div>
     </div>
+
 </section>
 <section class="mythumb">
-    <div class="news">
-        <div class="imageNews">imageNews</div>
-        <div class="textNews">textNews</div>
+    <div class="thumbNews">
+        <div class="news">
+            <div class="imageNews"><img src="./../../build/static/imageNews.png" alt="news image"></div>
+            <div class="textNews">
+                <b>HEALTH / APRIL 2, 2017</b>
+                <h3>THE JOURNAL OF HEALTH</h3>
+                <p>Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
+                    In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. […] READ MORE</p>
+            </div>
+        </div>
+        <div class="news">
+            <div class="imageNews"><img src="./../../build/static/imageNews.png" alt="news image"></div>
+            <div class="textNews">
+                <b>HEALTH / APRIL 2, 2017</b>
+                <h3>THE JOURNAL OF HEALTH</h3>
+                <p>Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
+                    In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. […] READ MORE</p>
+            </div>
+        </div>
     </div>
     <div class="categories">
-        <b>Categories</b>
+        <div class="gni-liniyu">
+            <b>Categories</b>
+        </div>
         <ul>
             <li>Ddsign (6)</li>
             <li>Food (5)</li>
@@ -52,6 +71,7 @@
             <li>Travel (6)</li>
         </ul>
     </div>
+
 </section>
 <script src="./build/js/main.js"></script>
 </body>
